Revert "Refactor: Apply GEMINI.md guidelines and remove wildcard imports"
This reverts commit 272e55ad6e64dd608309ddc69292738f2b7e0c22.