@@ -3,7 +3,6 @@ package com.devgrowth.project.service;
 import com.devgrowth.project.model.GrowthLog;
 import com.devgrowth.project.model.User;
 import lombok.RequiredArgsConstructor;
-import lombok.val;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.stereotype.Service;
 
@@ -13,7 +12,6 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class RetrospectiveService {
 
     private final GrowthLogService growthLogService;
@@ -25,31 +23,29 @@ public class RetrospectiveService {
     }
 
     public String generateWeeklyRetrospective(User user) {
-        val today = LocalDate.now();
-        val startOfWeek = today.with(DayOfWeek.MONDAY).minusWeeks(1);
-        val endOfWeek = startOfWeek.plusDays(6);
+        LocalDate today = LocalDate.now();
+        LocalDate startOfWeek = today.with(DayOfWeek.MONDAY).minusWeeks(1);
+        LocalDate endOfWeek = startOfWeek.plusDays(6);
 
-        val weeklyLogs = growthLogService.findGrowthLogs(user, startOfWeek, endOfWeek);
+        List<GrowthLog> weeklyLogs = growthLogService.findGrowthLogs(user, startOfWeek, endOfWeek);
 
         if (weeklyLogs.isEmpty()) {
             return "지난 주 활동 기록이 없습니다.";
         }
 
-        val weeklyDataSummary = weeklyLogs.stream()
+        String weeklyDataSummary = weeklyLogs.stream()
                 .map(log -> String.format("날짜: %s, 커밋 수: %d, 평균 점수: %.2f, 연속 커밋: %d일",
                         log.getDate(), log.getCommitCount(), log.getAvgScore(), log.getStreakDay()))
                 .collect(Collectors.joining("\n"));
 
-        val prompt = """
-                You are a friendly coach for a developer. Based on the following weekly activity data,
-                generate a supportive and insightful weekly retrospective.
-                Highlight achievements, identify patterns, and provide actionable advice for the next week.
-
-                Weekly Data:
-                %s
-
-                Please provide the retrospective in Korean, using Markdown for formatting.
-                """.formatted(weeklyDataSummary);
+        String prompt = String.format(
+                "You are a friendly coach for a developer. Based on the following weekly activity data, " +
+                        "generate a supportive and insightful weekly retrospective. " +
+                        "Highlight achievements, identify patterns, and provide actionable advice for the next week. " +
+                        "Weekly Data:\n%s\n" +
+                        "Please provide the retrospective in Korean, using Markdown for formatting.",
+                weeklyDataSummary
+        );
 
         return chatClient.prompt()
                 .user(prompt)
